--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /vue/nuxt-test/node_modules/
 /node/node_modules/
 /node/egg-example/node_modules/
+/project/back/node_modules/
+/project/front/node_modules/
