webpack-dev-server使用

--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack",
   "version": "1.0.0",
-  "description": "推荐局部安装，不同项目可以使用不同版本;\r 全局安装会造成版本指定，如果多个项目依赖不同版本，会造成构建失败。\r webpack4 安装：`npm i webpack webpack-cli -D`",
+  "description": "webpack使用",
   "main": "index.js",
   "dependencies": {
     "autoprefixer": "^9.7.6",
@@ -17,11 +17,15 @@
     "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
-    "mini-css-extract-plugin": "^0.9.0"
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "test": "webpack",
-    "dev": "webpack --config webpack.dev.config.js"
+    "dev": "webpack --config webpack.dev.config.js",
+    "server": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
