--- a/React/antd/package.json
+++ b/React/antd/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "react-antd",
+  "name": "lesson3-1126",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.0.5",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "antd": "^3.25.3",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -33,9 +34,7 @@
     ]
   },
   "devDependencies": {
-    "@ant-design/compatible": "^1.0.2",
-    "@babel/plugin-proposal-decorators": "^7.10.1",
-    "antd": "^3.25.3",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "react-app-rewired": "^2.1.5"
