--- a/React/react-antd/package.json
+++ b/React/react-antd/package.json
@@ -38,6 +38,7 @@
     "antd": "^3.25.3",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.5",
+    "redux": "^4.0.5"
   }
 }
