--- a/Flutter/douban_app/pubspec.yaml
+++ b/Flutter/douban_app/pubspec.yaml
@@ -1,5 +1,5 @@
-name: hello_flutter
-description: A new Flutter project.
+name: douban_app
+description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -21,7 +21,6 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  dio: ^3.0.9
   flutter:
     sdk: flutter
 
@@ -46,9 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
-#    - assets/images/yz.jpg
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
